force-app/main/default/objects/Price_List__c/Price_List__c.object-meta.xml
<CustomObject>
    <label>Price List</label>
    <pluralLabel>Price Lists</pluralLabel>
    <nameField>
        <label>Price List Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Custom pricing beyond standard PriceBook for region and channel-specific pricing (MOD-01 Master Data Management)</description>
</CustomObject>