force-app/main/default/objects/Price_List__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Lookup</type>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Category Price Lists</relationshipLabel>
    <relationshipName>Category_Price_Lists</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product category for category-based pricing. Used in combination with Territory and Channel for multi-dimensional price resolution.</description>
</CustomField>