force-app/main/default/objects/Price_List__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Price Lists</relationshipLabel>
    <relationshipName>Customer_Price_Lists</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer (Account) for customer-specific pricing. When populated, this price list entry applies only to this customer (highest priority).</description>
</CustomField>