force-app/main/default/objects/Price_List__c/fields/Min_Qty__c.field-meta.xml
<CustomField>
    <fullName>Min_Qty__c</fullName>
    <label>Min Qty</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>