force-app/main/default/objects/Price_List__c/fields/Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Type__c</fullName>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRP</fullName>
            </value>
            <value>
                <fullName>Distributor Price</fullName>
            </value>
            <value>
                <fullName>Retailer Price</fullName>
            </value>
            <value>
                <fullName>Special Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>