force-app/main/default/objects/Price_List__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <label>Product Extension</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Price Lists</relationshipLabel>
    <relationshipName>Price_Lists</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>