force-app/main/default/objects/Price_List__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Lookup</type>
    <referenceTo>Company_Hierarchy__c</referenceTo>
    <relationshipLabel>Price Lists</relationshipLabel>
    <relationshipName>Price_Lists</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>