force-app/main/default/objects/Price_List__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Territory Price Lists</relationshipLabel>
    <relationshipName>Territory_Price_Lists</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Territory for territory-based pricing. Used in combination with Category and Channel for multi-dimensional price resolution.</description>
</CustomField>