force-app/main/default/objects/Price_List__c/validationRules/Min_Qty_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Qty_Non_Negative</fullName>
    <active>true</active>
    <description>Minimum Quantity cannot be negative when specified.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Min_Qty__c)),
    Min_Qty__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Min_Qty__c</errorDisplayField>
    <errorMessage>Minimum Quantity cannot be negative.</errorMessage>
</ValidationRule>