force-app/main/default/objects/Price_List__c/validationRules/Unit_Price_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Price_Positive</fullName>
    <active>true</active>
    <description>Unit Price must be greater than zero.</description>
    <errorConditionFormula>Unit_Price__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Unit_Price__c</errorDisplayField>
    <errorMessage>Unit Price must be greater than zero.</errorMessage>
</ValidationRule>