force-app/main/default/objects/Price_List__c/listViews/Active_Price_Lists.listView-meta.xml
<ListView>
    <fullName>Active_Price_Lists</fullName>
    <columns>NAME</columns>
    <columns>Product_Ext__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Price_Type__c</columns>
    <columns>Channel__c</columns>
    <columns>Region__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Active Price Lists</label>
</ListView>