force-app/main/default/objects/Price_List__c/listViews/All_Price_Lists.listView-meta.xml
<ListView>
    <fullName>All_Price_Lists</fullName>
    <columns>NAME</columns>
    <columns>Product_Ext__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Price_Type__c</columns>
    <columns>Channel__c</columns>
    <columns>Region__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Price Lists</label>
</ListView>