force-app/main/default/objects/Price_List__c/listViews/Customer_Price_Lists.listView-meta.xml
<ListView>
    <fullName>Customer_Price_Lists</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Product_Ext__c</columns>
    <columns>Customer__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Price_Type__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <label>Customer Price Lists</label>
</ListView>